2022-08-10  Andreas Schwab  <schwab@suse.de>

	* readelf.c (print_attributes): Also handle SHT_RISCV_ATTRIBUTES.

2022-08-09  Andreas Schwab  <schwab@suse.de>

	* elflint.c (check_program_header): Don't complain about p_filesz
	> p_memsz if p_memsz is zero and p_type is PT_RISCV_ATTRIBUTES.

2022-08-01  Mark Wielaard  <mark@klomp.org>

	* readelf.c (handle_dynamic): Pass start of buffer to memrchr.
	Use dyn->d_un.d_val for offsets instead of d_ptr.

2022-04-28  Di Chen  <dichen@redhat.com>

	* readelf.c (options): Add use-dynamic 'D'.
	(use_dynamic_segment): New static bool.
	(enum dyn_idx): New.
	(get_dynscn_strtab): New function.
	(get_dynscn_addrs): Likewise.
	(find_offsets): Likewise.
	(parse_opt): Handle 'D'.
	(handle_dynamic): New argument phdr. Get data either through the shdr
	or phdr.  Print segment info when use_dynamic_segment. Use
	get_dynscn_strtab. Get library name and paths through strtab_data.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* strip.c (remove_debug_relocations): Check gelf_getshdr, gelf_getrela,
	gelf_getrel and gelf_getsymshndx don't return NULL.

2022-05-10  Mark Wielaard  <mark@klomp.org>

	* elfcompress.c (process_file): Sanity check shstrtab_name,
	shstrtab_newname and symstrents are only set once.

2022-04-24  Mark Wielaard  <mark@klomp.org>

	* elfclassify.c (main): Use classify_flag_no_stdin for no-std in options.

2022-04-19  Mark Wielaard  <mark@klomp.org>

	* readelf.c (get_dyn_ents): Define dyn_mem outside the while loop.

2022-03-01  Di Chen  <dichen@redhat.com>

	* readelf.c (get_dyn_ents): New function.
	(handle_dynamic): Use get_dyn_ents to get the actual number of
	Dynamic entries in the section.

2022-03-27  Mark Wielaard  <mark@klomp.org>

	* addr2line.c: Replace error (EXIT_FAILURE, ...) with error_exit(...).
	* ar.c: Likewise.
	* arlib.c: Likewise.
	* elfcompress.c: Likewise.
	* nm.c: Likewise.
	* objdump.c: Likewise.
	* readelf.c: Likewise.
	* size.c: Likewise.
	* strings.c: Likewise.
	* strip.c: Likewise.