@@ -1,3 +1,9 @@
+2022-08-26  Mark Wielaard  <mark@klomp.org>
+
+	* run-ar-N.sh: New test.
+	* Makefile.am (TESTS): Add run-ar-N.sh.
+	(EXTRA_DIST): Likewise.
+
 2022-09-02  Frank Ch. Eigler  <fche@redhat.com>
 
 	* run-debuginfod-response-headers.sh: Use case-insensitive
