@@ -1,3 +1,9 @@
+2022-08-28  Mark Wielaard  <mark@klomp.org>
+
+	* ar.c (do_oper_extract): Predecrement instance before compare
+	to zero.
+	(do_oper_delete): Likewise.
+
 2022-08-10  Andreas Schwab  <schwab@suse.de>
 
 	* readelf.c (print_attributes): Also handle SHT_RISCV_ATTRIBUTES.
